--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,7 +11,7 @@ galaxy_info:
   # - Apache
   # - CC-BY
   license: Apache 2
-  min_ansible_version: 2.0
+  min_ansible_version: 1.8
   #
   # Below are all platforms currently available. Just uncomment
   # the ones that apply to your role. If you don't see your
@@ -116,7 +116,7 @@ galaxy_info:
   - web
 dependencies:
   - src: https://github.com/silpion/ansible-lib
-    name: silpion.lib
+    role: silpion.lib
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
