--- a/meta/main.yml
+++ b/meta/main.yml
@@ -115,8 +115,7 @@ galaxy_info:
   #- system
   - web
 dependencies:
-  - src: https://github.com/silpion/ansible-lib
-    role: silpion.lib
+  - role: "git+https://github.com/silpion/ansible-lib"
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
