--- a/meta/main.yml
+++ b/meta/main.yml
@@ -115,7 +115,8 @@ galaxy_info:
   #- system
   - web
 dependencies:
-  - git+https://github.com/silpion/ansible-lib.git
+  - name: silpion.lib
+    src: git+https://github.com/silpion/ansible-lib.git
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
