--- a/meta/main.yml
+++ b/meta/main.yml
@@ -115,8 +115,7 @@ galaxy_info:
   #- system
   - web
 dependencies:
-  - name: silpion.lib
-    src: git+https://github.com/silpion/ansible-lib.git
+  - role: silpion.lib
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
